Migrate to fluid output for many recipe results
Means we get tag preference on output fluids for common fluids like honey or molten iron
Also implemented a new helper, IMeltingRecipe#getTemperature to fetch a Tinkers united temperature. Will make it easier to change the rules later if we wish