@@ -9,21 +9,19 @@ import net.minecraft.world.level.Level;
 import net.minecraftforge.fluids.FluidStack;
 import net.minecraftforge.fluids.capability.IFluidHandler;
 import net.minecraftforge.fluids.capability.IFluidHandler.FluidAction;
-import slimeknights.mantle.data.loadable.common.FluidStackLoadable;
 import slimeknights.mantle.data.loadable.common.IngredientLoadable;
 import slimeknights.mantle.data.loadable.field.ContextKey;
 import slimeknights.mantle.data.loadable.field.LoadableField;
 import slimeknights.mantle.data.loadable.primitive.IntLoadable;
 import slimeknights.mantle.data.loadable.record.RecordLoadable;
+import slimeknights.mantle.recipe.helper.FluidOutput;
 import slimeknights.mantle.recipe.helper.LoadableRecipeSerializer;
 import slimeknights.tconstruct.common.config.Config;
 import slimeknights.tconstruct.library.recipe.melting.IMeltingContainer.OreRateType;
 import slimeknights.tconstruct.smeltery.TinkerSmeltery;
 
 import javax.annotation.Nullable;
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -32,10 +30,10 @@ import java.util.stream.Stream;
 public class MeltingRecipe implements IMeltingRecipe {
   /* Reusable fields */
   protected static final LoadableField<Ingredient, MeltingRecipe> INPUT = IngredientLoadable.DISALLOW_EMPTY.requiredField("ingredient", MeltingRecipe::getInput);
-  protected static final LoadableField<FluidStack, MeltingRecipe> OUTPUT = FluidStackLoadable.REQUIRED_STACK_NBT.requiredField("result", MeltingRecipe::getOutput);
+  protected static final LoadableField<FluidOutput, MeltingRecipe> OUTPUT = FluidOutput.Loadable.REQUIRED.requiredField("result", r -> r.output);
   protected static final LoadableField<Integer, MeltingRecipe> TEMPERATURE = IntLoadable.FROM_ZERO.requiredField("temperature", MeltingRecipe::getTemperature);
   protected static final LoadableField<Integer, MeltingRecipe> TIME = IntLoadable.FROM_ONE.requiredField("time", MeltingRecipe::getTime);
-  protected static final LoadableField<List<FluidStack>, MeltingRecipe> BYPRODUCTS = FluidStackLoadable.REQUIRED_STACK_NBT.list(0).defaultField("byproducts", List.of(), r -> r.byproducts);
+  protected static final LoadableField<List<FluidOutput>, MeltingRecipe> BYPRODUCTS = FluidOutput.Loadable.REQUIRED.list(0).defaultField("byproducts", List.of(), r -> r.byproducts);
   /** Loader instance */
   public static final RecordLoadable<MeltingRecipe> LOADER = RecordLoadable.create(ContextKey.ID.requiredField(), LoadableRecipeSerializer.RECIPE_GROUP, INPUT, OUTPUT, TEMPERATURE, TIME, BYPRODUCTS, MeltingRecipe::new);
 
@@ -45,22 +43,21 @@ public class MeltingRecipe implements IMeltingRecipe {
   protected final String group;
   @Getter
   protected final Ingredient input;
-  @Getter
-  protected final FluidStack output;
+  protected final FluidOutput output;
   @Getter
   protected final int temperature;
   /** Number of "steps" needed to melt this, by default lava increases steps by 1 every 4 ticks (5 a second) */
   @Getter
   protected final int time;
-  protected final List<FluidStack> byproducts;
-  private List<List<FluidStack>> outputWithByproducts;
+  protected final List<FluidOutput> byproducts;
+  protected List<List<FluidStack>> outputWithByproducts;
 
-  public MeltingRecipe(ResourceLocation id, String group, Ingredient input, FluidStack output, int temperature, int time, List<FluidStack> byproducts) {
+  public MeltingRecipe(ResourceLocation id, String group, Ingredient input, FluidOutput output, int temperature, int time, List<FluidOutput> byproducts) {
     this(id, group, input, output, temperature, time, byproducts, true);
   }
 
   /** Constructor that allows canceling the lookup addition, for generated recipes in JEI */
-  public MeltingRecipe(ResourceLocation id, String group, Ingredient input, FluidStack output, int temperature, int time, List<FluidStack> byproducts, boolean addLookup) {
+  public MeltingRecipe(ResourceLocation id, String group, Ingredient input, FluidOutput output, int temperature, int time, List<FluidOutput> byproducts, boolean addLookup) {
     this.id = id;
     this.group = group;
     this.input = input;
@@ -88,6 +85,11 @@ public class MeltingRecipe implements IMeltingRecipe {
     return time;
   }
 
+  /** Gets the output of this recipe */
+  public FluidStack getOutput() {
+    return output.get();
+  }
+
   @Override
   public FluidStack getOutput(IMeltingContainer inv) {
     return output.copy();
@@ -112,22 +114,27 @@ public class MeltingRecipe implements IMeltingRecipe {
   @Override
   public void handleByproducts(IMeltingContainer inv, IFluidHandler handler) {
     // fill byproducts until we run out of space or byproducts
-    for (FluidStack fluidStack : byproducts) {
-      handler.fill(fluidStack.copy(), FluidAction.EXECUTE);
+    for (FluidOutput fluid : byproducts) {
+      handler.fill(fluid.copy(), FluidAction.EXECUTE);
     }
+  }
+
+  /** Scales the output for display in the foundry tab */
+  private Stream<FluidStack> scaleOutput() {
+    return Stream.of(output).map(output -> {
+      // boost for foundry rate, this method is used for the foundry only
+      OreRateType rate = getOreType();
+      if (rate != null) {
+        return new FluidStack(output.get(), Config.COMMON.foundryOreRate.applyOreBoost(rate, output.getAmount()));
+      }
+      return output.get();
+    });
   }
 
   /** Gets the recipe output for foundry display in JEI */
   public List<List<FluidStack>> getOutputWithByproducts() {
     if (outputWithByproducts == null) {
-      outputWithByproducts = Stream.concat(Stream.of(output).map(output -> {
-        // boost for foundry rate, this method is used for the foundry only
-        OreRateType rate = getOreType();
-        if (rate != null) {
-          return new FluidStack(output, Config.COMMON.foundryOreRate.applyOreBoost(rate, output.getAmount()));
-        }
-        return output;
-      }), byproducts.stream()).map(Collections::singletonList).collect(Collectors.toList());
+      outputWithByproducts = Stream.concat(Stream.of(output), byproducts.stream()).map(fluid -> List.of(fluid.get())).toList();
     }
     return outputWithByproducts;
   }
